gstv4l2bufferpool: handle -EPIPE from DQBUF to signal EOS

The V4L2 decoder signals EOS by returning -EPIPE from DQBUF after the
last buffer.

https://bugzilla.gnome.org/show_bug.cgi?id=743338